add lidar network configuration

--- a/ansible/setup.yaml
+++ b/ansible/setup.yaml
@@ -8,7 +8,11 @@
           interface_name: eqos0
         dhcp:
           interface_name: mgbe1
+        lidar:
+          interface_address: 192.168.1.100
+          interface_name: mgbe0
     - ptp4l_client_interface: eqos0
+    - ptp4l_host_interface: mgbe0
   vars_prompt:
 #    - name: prompt_install_camera_driver
 #      prompt: |-
