--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -57,12 +57,12 @@
 
 - name: Install dependencies
   block:
-#    - name: Install jetpack
-#      ansible.builtin.apt:
-#        name:
-#          - nvidia-jetpack
-#        install_recommends: false
-#        update_cache: true
+    #    - name: Install jetpack
+    #      ansible.builtin.apt:
+    #        name:
+    #          - nvidia-jetpack
+    #        install_recommends: false
+    #        update_cache: true
     - name: Install OpenCV deps
       ansible.builtin.command:
         cmd: "{{ opencv_install_deps_script }}"
@@ -113,12 +113,151 @@
   become: true
 
 - name: Build ROS2 Humble
-  ansible.builtin.command:
-    cmd: "{{ ros2_build_script }}"
-  environment:
-    ROS_DISTRO: "{{ ros_distro }}"
-    ROS_PKG: ros_base
-    ROS_ROOT: "/opt/ros/{{ ros_distro }}"
+  block:
+    - name: Add the ROS deb repo to the apt sources list
+      block:
+        - name: Install apt packages
+          ansible.builtin.apt:
+            name:
+              - curl
+              - wget
+              - gnupg2
+              - lsb-release
+              - ca-certificates
+            install_recommends: false
+            update_cache: true
+        - name: Download ros.key
+          ansible.builtin.command:
+            cmd: "curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg"
+        - name: "TODO: add name"
+          ansible.builtin.command:
+            cmd: 'echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null'
+    - name: Install apt packages
+      ansible.builtin.apt:
+        name:
+          - build-essential
+          - cmake
+          - git
+          - libbullet-dev
+          - libpython3-dev
+          - python3-colcon-common-extensions
+          - python3-flake8
+          - python3-pip
+          - python3-numpy
+          - python3-pytest-cov
+          - python3-rosdep
+          - python3-setuptools
+          - python3-vcstool
+          - python3-rosinstall-generator
+          - libasio-dev
+          - libtinyxml2-dev
+          - libcunit1-dev
+        install_recommends: false
+        update_cache: true
+    - name: Install pip packages
+      ansible.builtin.pip:
+        name:
+          - argcomplete
+          - flake8-blind-except
+          - flake8-builtins
+          - flake8-class-newline
+          - flake8-comprehensions
+          - flake8-deprecated
+          - flake8-docstrings
+          - flake8-import-order
+          - flake8-quotes
+          - pytest-repeat
+          - pytest-rerunfailures
+          - pytest
+          - scikit-build
+          - cmake
+        extra_args: "--upgrade --no-cache-dir"
+    - name: Create the ROS root directory and src directory
+      ansible.builtin.file:
+        path: "{{ ros_root_dir }}/src"
+        state: directory
+        recurse: true
+    - name: Download ROS packages
+      ansible.builtin.command:
+        cmd: >
+          "rosinstall_generator --deps --rosdistro ${ROS_DISTRO} ${ROS_PKG} 
+          launch_xml 
+          launch_yaml 
+          launch_testing 
+          launch_testing_ament_cmake 
+          demo_nodes_cpp 
+          demo_nodes_py 
+          example_interfaces 
+          camera_calibration_parsers 
+          camera_info_manager 
+          cv_bridge 
+          v4l2_camera 
+          vision_opencv 
+          vision_msgs 
+          image_geometry 
+          image_pipeline 
+          image_transport 
+          compressed_image_transport 
+          compressed_depth_image_transport 
+          pcl_msgs 
+          perception_pcl 
+          logging_demo 
+          udp_msgs 
+          angles 
+          diagnostics 
+          tf_transformations 
+          mrt_cmake_modules 
+          gtest_vendor 
+          grid_map 
+          filters 
+          nav2_msgs 
+          tf2-eigen 
+          ament_cmake_clang_format 
+          > ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall"
+    - name: Import packages to source directory
+      ansible.builtin.command:
+        cmd: "vcs import src < ros2.${ROS_DISTRO}.${ROS_PKG}.rosinstall"
+    - name: Install dependencies with rosdep
+      block:
+        - name: Initialize rosdep
+          ansible.builtin.command:
+            cmd: rosdep init
+        - name: Update rosdep
+          ansible.builtin.command:
+            cmd: rosdep update
+        - name: Run rosdep
+          ansible.builtin.command:
+            cmd: rosdep install -y --ignore-src --from-paths src --rosdistro {{ ros_distro }} --skip-keys {{ skip_keys }}
+    - name: Colcon build
+      ansible.builtin.command:
+        cmd: colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=Release
+    - name: Remove build files
+      block:
+        - name: Remove source directory
+          ansible.builtin.file:
+            path: "{{ ros_root_dir }}/src"
+            state: absent
+        - name: Remove log directory
+          ansible.builtin.file:
+            path: "{{ ros_root_dir }}/logs"
+            state: absent
+        - name: Remove build directory
+          ansible.builtin.file:
+            path: "{{ ros_root_dir }}/build"
+            state: absent
+        - name: Remove .rosinstall files
+          ansible.builtin.file:
+            path: "{{ ros_root_dir }}/*.rosinstall"
+            state: absent
+    - name: Clean up apt
+      block:
+        - name: Remove
+          ansible.builtin.file:
+            path: /var/lib/apt/lists/*
+            state: absent
+        - name: Apt-get clean
+          ansible.builtin.apt:
+            clean: true
   become: true
 
 - name: Install extra edge-auto-jetson dependency
