--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -77,40 +77,41 @@
         update_cache: true
   become: true
 
-- name: Install PCL
-  block:
-    - name: Define directory name
-      set_fact:
-        pcl_directory: "{{ ansible_env.HOME }}/pcl"
-    - name: Create build directory
-      ansible.builtin.file:
-        path: "{{ pcl_directory }}"
-        state: directory
-    - name: Download and extract PCL 1.12.1 source
-      ansible.builtin.unarchive:
-        src: https://github.com/PointCloudLibrary/pcl/releases/download/pcl-1.12.1/source.tar.gz
-        dest: "{{ pcl_directory }}"
-        remote_src: yes
-    - name: Create build directory
-      ansible.builtin.file:
-        path: "{{ pcl_directory }}/pcl/build"
-        state: directory
-    - name: Run cmake
-      ansible.builtin.command:
-        cmd: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc ..
-        chdir: "{{ pcl_directory }}/pcl/build"
-      environment:
-        PATH: "/usr/local/cuda/bin:{{ ansible_env.PATH }}"
-    - name: Install PCL
-      ansible.builtin.command:
-        cmd: make -j7 install
-        chdir: "{{ pcl_directory }}/pcl/build"
-      become: true
-
-- name: Install OpenCV
-  ansible.builtin.command:
-    cmd: "{{ opencv_install_script }} https://nvidia.box.com/shared/static/2hssa5g3v28ozvo3tc3qwxmn78yerca9.gz OpenCV-4.5.0-aarch64.tar.gz"
-  become: true
+# for testing
+#- name: Install PCL
+#  block:
+#    - name: Define directory name
+#      set_fact:
+#        pcl_directory: "{{ ansible_env.HOME }}/pcl"
+#    - name: Create build directory
+#      ansible.builtin.file:
+#        path: "{{ pcl_directory }}"
+#        state: directory
+#    - name: Download and extract PCL 1.12.1 source
+#      ansible.builtin.unarchive:
+#        src: https://github.com/PointCloudLibrary/pcl/releases/download/pcl-1.12.1/source.tar.gz
+#        dest: "{{ pcl_directory }}"
+#        remote_src: yes
+#    - name: Create build directory
+#      ansible.builtin.file:
+#        path: "{{ pcl_directory }}/pcl/build"
+#        state: directory
+#    - name: Run cmake
+#      ansible.builtin.command:
+#        cmd: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc ..
+#        chdir: "{{ pcl_directory }}/pcl/build"
+#      environment:
+#        PATH: "/usr/local/cuda/bin:{{ ansible_env.PATH }}"
+#    - name: Install PCL
+#      ansible.builtin.command:
+#        cmd: make -j7 install
+#        chdir: "{{ pcl_directory }}/pcl/build"
+#      become: true
+#
+#- name: Install OpenCV
+#  ansible.builtin.command:
+#    cmd: "{{ opencv_install_script }} https://nvidia.box.com/shared/static/2hssa5g3v28ozvo3tc3qwxmn78yerca9.gz OpenCV-4.5.0-aarch64.tar.gz"
+#  become: true
 
 - name: Build ROS2 Humble
   block:
@@ -132,6 +133,7 @@
         - name: "TODO: add name"
           ansible.builtin.command:
             cmd: 'echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] http://packages.ros.org/ros2/ubuntu $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/ros2.list > /dev/null'
+      become: true
     - name: Install apt packages
       ansible.builtin.apt:
         name:
@@ -140,7 +142,7 @@
           - git
           - libbullet-dev
           - libpython3-dev
-          - python3-colcon-common-extensions
+#          - python3-colcon-common-extensions
           - python3-flake8
           - python3-pip
           - python3-numpy
@@ -152,11 +154,15 @@
           - libasio-dev
           - libtinyxml2-dev
           - libcunit1-dev
+          - apt-utils
         install_recommends: false
         update_cache: true
+      become: true
     - name: Install pip packages
       ansible.builtin.pip:
         name:
+          - colcon-common-extensions
+          - catkin-pkg-modules
           - argcomplete
           - flake8-blind-except
           - flake8-builtins
@@ -172,67 +178,53 @@
           - scikit-build
           - cmake
         extra_args: "--upgrade --no-cache-dir"
+    - name: Could NOT find Python3 workaround
+      ansible.builtin.apt:
+        name:
+          - python3.9
+          - libpython3.9*
+        purge: true
+        state: absent
+      become: true
     - name: Create the ROS root directory and src directory
       ansible.builtin.file:
         path: "{{ ros_root_dir }}/src"
         state: directory
         recurse: true
+      become: true
+#    - name: Create .rosinstall file to hold ROS packages
+#      ansible.builtin.file:
+#        path: ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall
+#        state: touch
     - name: Download ROS packages
-      ansible.builtin.command:
-        cmd: >
-          "rosinstall_generator --deps --rosdistro ${ROS_DISTRO} ${ROS_PKG} 
-          launch_xml 
-          launch_yaml 
-          launch_testing 
-          launch_testing_ament_cmake 
-          demo_nodes_cpp 
-          demo_nodes_py 
-          example_interfaces 
-          camera_calibration_parsers 
-          camera_info_manager 
-          cv_bridge 
-          v4l2_camera 
-          vision_opencv 
-          vision_msgs 
-          image_geometry 
-          image_pipeline 
-          image_transport 
-          compressed_image_transport 
-          compressed_depth_image_transport 
-          pcl_msgs 
-          perception_pcl 
-          logging_demo 
-          udp_msgs 
-          angles 
-          diagnostics 
-          tf_transformations 
-          mrt_cmake_modules 
-          gtest_vendor 
-          grid_map 
-          filters 
-          nav2_msgs 
-          tf2-eigen 
-          ament_cmake_clang_format 
-          > ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall"
+      ansible.builtin.shell:
+        cmd: "rosinstall_generator --deps --rosdistro {{ ros_distro }} {{ ros_pkg }} launch_xml launch_yaml launch_testing launch_testing_ament_cmake demo_nodes_cpp demo_nodes_py example_interfaces camera_calibration_parsers camera_info_manager cv_bridge v4l2_camera vision_opencv vision_msgs image_geometry image_pipeline image_transport compressed_image_transport compressed_depth_image_transport pcl_msgs perception_pcl logging_demo udp_msgs angles diagnostics tf_transformations mrt_cmake_modules gtest_vendor grid_map filters nav2_msgs tf2-eigen ament_cmake_clang_format > {{ ros_root_dir }}/ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall"
+      become: true
     - name: Import packages to source directory
-      ansible.builtin.command:
-        cmd: "vcs import src < ros2.${ROS_DISTRO}.${ROS_PKG}.rosinstall"
+      ansible.builtin.shell:
+        cmd: "vcs import src < ros2.humble.ros_base.rosinstall"
+        chdir: "{{ ros_root_dir }}"
+      become: true
     - name: Install dependencies with rosdep
       block:
-        - name: Initialize rosdep
-          ansible.builtin.command:
-            cmd: rosdep init
         - name: Update rosdep
-          ansible.builtin.command:
+          ansible.builtin.shell:
             cmd: rosdep update
         - name: Run rosdep
-          ansible.builtin.command:
-            cmd: rosdep install -y --ignore-src --from-paths src --rosdistro {{ ros_distro }} --skip-keys {{ skip_keys }}
+          shell: "rosdep install -y --ignore-src --from-paths src --rosdistro humble --skip-keys 'libopencv-dev python3-catkin-pkg-modules python3-rosdistro-modules libignition-math6-dev rti-connext-dds-6.0.1 ignition-math6'"
+          args:
+            chdir: "{{ ros_root_dir }}"
     - name: Colcon build
       ansible.builtin.command:
         cmd: colcon build --merge-install --cmake-args -DCMAKE_BUILD_TYPE=Release
+        chdir: "{{ ros_root_dir }}"
+      become: true
     - name: Remove build files
       block:
+        - name: Remove .rosinstall file
+          ansible.builtin.file:
+            path: ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall
+            state: absent
         - name: Remove source directory
           ansible.builtin.file:
             path: "{{ ros_root_dir }}/src"
@@ -249,6 +241,7 @@
           ansible.builtin.file:
             path: "{{ ros_root_dir }}/*.rosinstall"
             state: absent
+      become: true
     - name: Clean up apt
       block:
         - name: Remove
@@ -258,7 +251,7 @@
         - name: Apt-get clean
           ansible.builtin.apt:
             clean: true
-  become: true
+      become: true
 
 - name: Install extra edge-auto-jetson dependency
   ansible.builtin.apt:
