--- a/ansible/roles/ros2/tasks/main.yaml
+++ b/ansible/roles/ros2/tasks/main.yaml
@@ -57,12 +57,6 @@
 
 - name: Install dependencies
   block:
-    #    - name: Install jetpack
-    #      ansible.builtin.apt:
-    #        name:
-    #          - nvidia-jetpack
-    #        install_recommends: false
-    #        update_cache: true
     - name: Install OpenCV deps
       ansible.builtin.command:
         cmd: "{{ opencv_install_deps_script }}"
@@ -73,45 +67,75 @@
           - libboost-filesystem-dev
           - libboost-date-time-dev
           - libboost-iostreams-dev
+          - libvtk7-dev
         install_recommends: false
         update_cache: true
   become: true
 
-# for testing
-#- name: Install PCL
-#  block:
-#    - name: Define directory name
-#      set_fact:
-#        pcl_directory: "{{ ansible_env.HOME }}/pcl"
-#    - name: Create build directory
-#      ansible.builtin.file:
-#        path: "{{ pcl_directory }}"
-#        state: directory
-#    - name: Download and extract PCL 1.12.1 source
-#      ansible.builtin.unarchive:
-#        src: https://github.com/PointCloudLibrary/pcl/releases/download/pcl-1.12.1/source.tar.gz
-#        dest: "{{ pcl_directory }}"
-#        remote_src: yes
-#    - name: Create build directory
-#      ansible.builtin.file:
-#        path: "{{ pcl_directory }}/pcl/build"
-#        state: directory
-#    - name: Run cmake
-#      ansible.builtin.command:
-#        cmd: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc ..
-#        chdir: "{{ pcl_directory }}/pcl/build"
-#      environment:
-#        PATH: "/usr/local/cuda/bin:{{ ansible_env.PATH }}"
-#    - name: Install PCL
-#      ansible.builtin.command:
-#        cmd: make -j7 install
-#        chdir: "{{ pcl_directory }}/pcl/build"
-#      become: true
-#
-#- name: Install OpenCV
-#  ansible.builtin.command:
-#    cmd: "{{ opencv_install_script }} https://nvidia.box.com/shared/static/2hssa5g3v28ozvo3tc3qwxmn78yerca9.gz OpenCV-4.5.0-aarch64.tar.gz"
-#  become: true
+- name: Install PCL
+  block:
+    - name: Define directory name
+      set_fact:
+        pcl_directory: "{{ ansible_env.HOME }}/pcl"
+    - name: Create build directory
+      ansible.builtin.file:
+        path: "{{ pcl_directory }}"
+        state: directory
+    - name: Download and extract PCL 1.12.1 source
+      ansible.builtin.unarchive:
+        src: https://github.com/PointCloudLibrary/pcl/releases/download/pcl-1.12.1/source.tar.gz
+        dest: "{{ pcl_directory }}"
+        remote_src: yes
+    - name: Create build directory
+      ansible.builtin.file:
+        path: "{{ pcl_directory }}/pcl/build"
+        state: directory
+    - name: Run cmake
+      ansible.builtin.command:
+        cmd: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc ..
+        chdir: "{{ pcl_directory }}/pcl/build"
+      environment:
+        PATH: "/usr/local/cuda/bin:{{ ansible_env.PATH }}"
+    - name: Install PCL
+      ansible.builtin.command:
+        cmd: make -j7 install
+        chdir: "{{ pcl_directory }}/pcl/build"
+      become: true
+
+- name: Install OpenCV
+  ansible.builtin.command:
+    cmd: "{{ opencv_install_script }} https://nvidia.box.com/shared/static/2hssa5g3v28ozvo3tc3qwxmn78yerca9.gz OpenCV-4.5.0-aarch64.tar.gz"
+  become: true
+
+- name: Install range-v3 0.11.0
+  block:
+    - name: Define directory name
+      set_fact:
+        range_v3_directory: "{{ ansible_env.HOME }}/range-v3"
+    - name: Create build directory
+      ansible.builtin.file:
+        path: "{{ range_v3_directory }}"
+        state: directory
+    - name: Download and extract range-v3 0.11.0 source
+      ansible.builtin.unarchive:
+        src: https://github.com/ericniebler/range-v3/archive/refs/tags/0.11.0.tar.gz
+        dest: "{{ range_v3_directory }}"
+        remote_src: yes
+    - name: Create build directory
+      ansible.builtin.file:
+        path: "{{ range_v3_directory }}/range-v3/build"
+        state: directory
+    - name: Run cmake
+      ansible.builtin.command:
+        cmd: cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_CUDA_COMPILER=/usr/local/cuda/bin/nvcc ..
+        chdir: "{{ range_v3_directory }}/range-v3/build"
+      environment:
+        PATH: "/usr/local/cuda/bin:{{ ansible_env.PATH }}"
+    - name: Install range-v3
+      ansible.builtin.command:
+        cmd: make -j7 install
+        chdir: "{{ range_v3_directory }}/range-v3/build"
+      become: true
 
 - name: Build ROS2 Humble
   block:
@@ -142,7 +166,7 @@
           - git
           - libbullet-dev
           - libpython3-dev
-#          - python3-colcon-common-extensions
+          #          - python3-colcon-common-extensions
           - python3-flake8
           - python3-pip
           - python3-numpy
@@ -192,10 +216,10 @@
         state: directory
         recurse: true
       become: true
-#    - name: Create .rosinstall file to hold ROS packages
-#      ansible.builtin.file:
-#        path: ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall
-#        state: touch
+    #    - name: Create .rosinstall file to hold ROS packages
+    #      ansible.builtin.file:
+    #        path: ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall
+    #        state: touch
     - name: Download ROS packages
       ansible.builtin.shell:
         cmd: "rosinstall_generator --deps --rosdistro {{ ros_distro }} {{ ros_pkg }} launch_xml launch_yaml launch_testing launch_testing_ament_cmake demo_nodes_cpp demo_nodes_py example_interfaces camera_calibration_parsers camera_info_manager cv_bridge v4l2_camera vision_opencv vision_msgs image_geometry image_pipeline image_transport compressed_image_transport compressed_depth_image_transport pcl_msgs perception_pcl logging_demo udp_msgs angles diagnostics tf_transformations mrt_cmake_modules gtest_vendor grid_map filters nav2_msgs tf2-eigen ament_cmake_clang_format > {{ ros_root_dir }}/ros2.{{ ros_distro }}.{{ ros_pkg }}.rosinstall"
