remove opencv build dir after removing opencv installation

--- a/ansible/roles/cuda/tasks/main.yaml
+++ b/ansible/roles/cuda/tasks/main.yaml
@@ -6,6 +6,11 @@
     state: absent
     purge: true
 
+- name: Remove OpenCV build directory
+  ansible.builtin.file:
+    path: "{{ ansible_env.HOME }}/source_builds/jetson-containers"
+    state: absent
+
 - name: Install apt packages
   become: true
   ansible.builtin.apt:
